--- a/.github/workflows/main_votingappteamksv.yml
+++ b/.github/workflows/main_votingappteamksv.yml
@@ -10,7 +10,6 @@ on:
   workflow_dispatch:
 
 jobs:
-
   build:
     runs-on: windows-latest
 
@@ -23,14 +22,8 @@ jobs:
           dotnet-version: '6.0.x'
           include-prerelease: true
 
-#      - name: Build with dotnet
-#        run: dotnet build source/VotingApp/VotingApp.sln --configuration Release
-
-       - task: DotNetCoreCLI@2
-        inputs:
-        command: 'build'
-        projects: |
-          source/VotingApp/VotingApp/VotingApp.csproj 
+      - name: Build with dotnet
+        run: dotnet build ../../source/VotingApp/VotingApp.sln --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
