--- a/.github/workflows/main_votingappteamksv.yml
+++ b/.github/workflows/main_votingappteamksv.yml
@@ -23,7 +23,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build ../../source/VotingApp --configuration Release
+        run: dotnet build ../../source/VotingApp/VotingApp --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
