add bootstrap them and background images for pages

--- a/source/VotingApp/VotingApp/appsettings.json
+++ b/source/VotingApp/VotingApp/appsettings.json
@@ -14,6 +14,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "VotingAppConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=VotingApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "VotingAppIdentity": "Server=(localdb)\\mssqllocaldb;Database=VotingAppIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "VotingAppIdentity": "Server=(localdb)\\mssqllocaldb;Database=VotingAppIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "VotingAppConnectionAzure": "Server=tcp:votingappserver.database.windows.net,1433;Initial Catalog=VotingApp;Persist Security Info=False;User ID=va2022admin;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "VotingAppIdentityAzure": "Server=tcp:votingappserver.database.windows.net,1433;Initial Catalog=VotingAppIdentity;Persist Security Info=False;User ID=va2022admin;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
