--- a/source/VotingApp/VotingApp/VotingApp.csproj
+++ b/source/VotingApp/VotingApp/VotingApp.csproj
@@ -23,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
     <PackageReference Include="Twitter.Bootstrap.Bootswatch.Yeti" Version="3.2.0" />
   </ItemGroup>
