--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,9 @@ Generated\ Files/
 TestResult.xml
 nunit-*.xml
 
+# JS Tests
+node_modules/
+
 # Build Results of an ATL Project
 [Dd]ebugPS/
 [Rr]eleasePS/
