--- a/source/VotingApp/BDDTests/BDDTests.csproj
+++ b/source/VotingApp/BDDTests/BDDTests.csproj
@@ -22,4 +22,8 @@
     <Folder Include="Support\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VotingApp\VotingApp.csproj" />
+  </ItemGroup>
+
 </Project>
