Added recreation of mp3 file and folder creation for tempaudio files

--- a/source/VotingApp/VotingApp/VotingApp.csproj
+++ b/source/VotingApp/VotingApp/VotingApp.csproj
@@ -36,4 +36,8 @@
     <ProjectReference Include="..\EmailService\EmailService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\TempAudio\" />
+  </ItemGroup>
+
 </Project>
