code changes for VA-59 - multi-round voting

--- a/source/VotingApp/VotingAppService/appsettings.json
+++ b/source/VotingApp/VotingAppService/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "ApiClientConfiguration": {
-    "VotingAppApiUrl": "https://teamksv-sb-v.azurewebsites.net/"
-  }
+    "VotingAppApiUrl": "https://localhost:7297/"
+  },
+  "VotingAppApiKey": "r6f86m48f8tj754d94ed7kh5f6rs8k"
 }
