code changes for multi-round vote history

--- a/source/VotingApp/VotingAppService/appsettings.json
+++ b/source/VotingApp/VotingAppService/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ApiClientConfiguration": {
-    "VotingAppApiUrl": "https://teamksv-sb-v.azurewebsites.net/"
+    "VotingAppApiUrl": "https://teamksv-demo.azurewebsites.net/"
   }
 }
