fixed bug with getting open and closed polls for logged in user only and added sql script to clear votes from database

--- a/source/VotingApp/VotingAppService/appsettings.json
+++ b/source/VotingApp/VotingAppService/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ApiClientConfiguration": {
-    "VotingAppApiUrl": "https://teamksv-demo.azurewebsites.net/"
+    "VotingAppApiUrl": "https://opiniony.azurewebsites.net/"
   }
 }
