--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,7 @@ env:
   DOTNET_VERSION: '6.0.x'           # set this to the dot net version to use
   PROJECT_PATH: './source/VotingApp/VotingApp'
   PROJECT_NAME: 'VotingApp'
-  TEST_FILENAME: 'TestResults.md'
+  TEST_FILENAME: 'NUnitTestResults.md'
   DEPLOYMENT_RESOURCE_GROUP_NAME: 'AutoTest'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
