--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,7 +12,7 @@ env:
   PROJECT_PATH: './source/VotingApp/VotingApp'
   PROJECT_NAME: 'VotingApp'
   TEST_PROJECT_PATH: './source/VotingApp/Tests_NUnit_Voting_App'
-  TEST_PROJECT_NAME: 'Tests_NUnit_Voting_App'
+  TEST_PROJECT_NAME: 'Tests_NUnit_Voting_App.csproj'
   TEST_FILENAME: 'NUnitTestResults.md'
   DEPLOYMENT_RESOURCE_GROUP_NAME: 'AutoTest'
 
